# pxl-slim

./: AUTHORS  CMakeLists.txt  COPYING  FindDCAP.cmake  FindLibSSH.cmake  FindPXL.cmake  Python.cmake  README.md  WindowsInstaller.cmake  Xcode.cmake  pypxl.wxs.in
algorithms/: CMakeLists.txt  algorithms.vcproj  pxl-algorithms.pc.in
algorithms/include/pxl/: algorithms.hh
algorithms/include/pxl/algorithms/: AutoLayout.hh
algorithms/src/: AutoLayout.cc
astro/: CMakeLists.txt  astro.vcproj  pxl-astro.pc.in  pxl-healpix.pc.in
astro/include/pxl/: astro.hh  healpix.hh
astro/include/pxl/astro/: Astro.hh  AstroBasicObject.hh  AstroObject.hh  CoordinateTransformations.hh  Healpix.hh  HealpixMap.hh  RegionOfInterest.hh  UHECR.hh  UHECRSource.hh
astro/src/: Astro.cc  AstroBasicObject.cc  AstroObject.cc  CoordinateTransformations.cc  Healpix.cc  HealpixMap.cc  RegionOfInterest.cc  UHECR.cc  UHECRSource.cc
core/: CMakeLists.txt  config.hh.in  pxl-core.pc.in
core/include/pxl/: core.hh
core/include/pxl/core/: Basic3Vector.hh  BasicContainer.hh  BasicMatrix.hh  BasicNVector.hh  ChunkReader.hh  ChunkWriter.hh  ConfigLoader.hh  Configuration.hh  Core.hh  Event.hh  File.hh  FileFactory.hh  Filter.hh  GenericInputHandler.hh  GenericOutputHandler.hh  Id.hh  InformationChunk.hh  InputFile.hh  InputHandler.hh  LorentzVector.hh  MessageDispatcher.hh  NamedTMPFile.hh  Object.hh  ObjectFactory.hh  ObjectManager.hh  ObjectOwner.hh  OutputFile.hh  OutputHandler.hh  PluginManager.hh  Random.hh  RandomAccessInputFile.hh  Relations.hh  Relative.hh  RotationMatrix.hh  Serializable.hh  SoftRelations.hh  Stream.hh  Tokenizer.hh  UserRecord.hh  Variant.hh  (+5 more)
core/src/: Basic3Vector.cc  BasicContainer.cc  BasicMatrix.cc  BasicNVector.cc  ChunkReader.cc  ChunkWriter.cc  ConfigLoader.cc  Configuration.cc  Core.cc  Event.cc  File.cc  FileFactory.cc  Id.cc  InformationChunk.cc  InputHandler.cc  LocalFileImpl.cc  LocalFileImpl.hh  LorentzVector.cc  MessageDispatcher.cc  NamedTMPFile.cc  Object.cc  ObjectFactory.cc  ObjectManager.cc  ObjectOwner.cc  OutputFile.cc  OutputHandler.cc  PluginManager.cc  Random.cc  Relations.cc  Relative.cc  SoftRelations.cc  Tokenizer.cc  UserRecord.cc  Variant.cc  WkPtrBase.cc  dCapFileImpl.hh  functions.cc  logging.cc  sFTPFileImpl.cc  sFTPFileImpl.hh
doc/: CMakeLists.txt  aminclude.am
doc/pxl/: CMakeLists.txt  Doxyfile.in  main.doc
doc/pypxl/: CMakeLists.txt  Doxyfile.in  main.doc  pypxl-pydoc.py
examples/: CMakeLists.txt  ExampleUserObject.cpp  ExampleUserObject.h  ExampleUserObject.i.in  ExampleUserObject_CmakeLists.txt  exampleModule.cpp  exampleModuleMakefile  exampleModule_CMakeLists.txt  pxl_GSLBLAS_example.cc  pxl_GSLBLAS_exampleMakefile  pxlexample.cc  pxlexampleMakefile  pxlmerge.py  pxlrc  pypxlexample.py  test_exampleUserObject.py
hep/: CMakeLists.txt  pxl-hep.pc.in
hep/include/pxl/: hep.hh
hep/include/pxl/hep/: AnalysisFork.hh  AnalysisProcess.hh  Collision.hh  CommonParticle.hh  CommonVertex.hh  EventView.hh  Hep.hh  Particle.hh  ParticleFilter.hh  Vertex.hh
hep/src/: AnalysisFork.cc  AnalysisProcess.cc  Collision.cc  EventView.cc  Hep.cc  Particle.cc  Vertex.cc
lib/simpleopt/: SimpleOpt.h
lib/zlib/: CMakeLists.txt  zconf.h.cmakein
modules/: CMakeLists.txt  pxl-modules.pc.in
modules/include/pxl/: modules.hh
modules/include/pxl/modules/: Analysis.hh  InputModule.hh  Module.hh  ModuleFactory.hh  Modules.hh  OutputModule.hh  PyAnalyseModule.hh  PyDecideModule.hh  PyGeneratorModule.hh  PyModule.hh  PyModuleModule.hh  PySwitchModule.hh
modules/src/: Analysis.cc  InputModule.cc  Module.cc  ModuleFactory.cc  Modules.cc  OutputModule.cc  PyAnalyseModule.cc  PyDecideModule.cc  PyGeneratorModule.cc  PyModule.cc  PyModuleModule.cc  PySwitchModule.cc
pxlrun/: CMakeLists.txt
pxlrun/src/: main.cc
pypxl/: CMakeLists.txt  Doxyfile.in  doxy2swig.py
pypxl/src/: __init__.py.in  algorithms.i.in  astro.i.in  core.i.in  healpix.i.in  hep.i.in  modules.i.in  xml.i.in
scripting/: CMakeLists.txt  pxl-scripting.pc.in
scripting/include/pxl/: scripting.hh
scripting/include/pxl/scripting/: DefaultScriptFilter.hh  EventViewScriptFilter.hh  ParticleScriptFilter.hh  Script.hh
scripting/src/: DefaultScriptFilter.cc  EventViewScriptFilter.cc  ParticleScriptFilter.cc  Script.cc
skeletons/: CMakeLists.txt  PyAnalyse.py  PyDecide.py  PyGenerator.py  PyModule.py  PySwitch.py
test/: CMakeLists.txt  HepTest.cc  ModuleTest.cc  count.xml  count_script.py  gcovr  pypxl_testAstro.py.in  pypxl_testAstro.py3.in  pypxl_testCore.py.in  pypxl_testCore.py3.in  pypxl_testHep.py.in  pypxl_testHep.py3.in  pypxl_testModules.py.in  pypxl_testModules.py3.in  pypxl_testXml.py.in  pypxl_testXml.py3.in  test_astro.cc  test_core.cc  test_healpix.cc  test_healpix_pythonInterface.py.in  test_hep.cc  test_modules.cc  test_scripting.cc  test_share.hh  test_xml.cc  zmumu_mc_10.pxlio
test/core_tests/: SerializableTests.hh
xcode/: Info.plist  make_clean.sh  pxl_python25.xcconfig  pxl_python26.xcconfig  script_functions.sh  wrap_python.xcconfig
xcode/pxl.xcodeproj/: project.pbxproj
xml/: CMakeLists.txt  pxl-xml.pc.in
xml/include/pxl/: xml.hh
xml/include/pxl/xml/: AnalysisXmlExport.hh  AnalysisXmlImport.hh  AnalysisXmlWriter.hh  ModuleXmlHandler.hh  UserRecordsXmlHandler.hh  UserRecordsXmlWriter.hh  XmlHandler.hh  XmlStream.hh
xml/src/: AnalysisXmlExport.cc  AnalysisXmlImport.cc  AnalysisXmlWriter.cc  ModuleXmlHandler.cc  UserRecordsXmlHandler.cc  UserRecordsXmlWriter.cc  XmlHandler.cc  XmlStream.cc
